--- a/example.env
+++ b/example.env
@@ -8,4 +8,6 @@ GOOGLE_API_KEY=your_google_api_key
 MODEL_NAME=model_name
 DB_URI=db_uri
 IS_USING_DB=True
+IS_USING_GPT=True
 LANGCHAIN_API_KEY=your-langchain-api-key
+API_URL=api_url
