--- a/example.env
+++ b/example.env
@@ -11,3 +11,5 @@ IS_USING_DB=True
 IS_USING_GPT=True
 LANGCHAIN_API_KEY=your-langchain-api-key
 API_URL=api_url
+IS_USING_API=True
+VMS_API_KEY=api_key
