--- a/app/datasource/api_vms.yaml
+++ b/app/datasource/api_vms.yaml
@@ -3,27 +3,20 @@ info:
   title: VMS_API
   version: 1.0.0
   description: |
-    NegaraAPI is VMS API for managing residents. This API allows fetching a list of residents filtered by parameters such as name and ID.
+    The VMS API allows fetching a list of residents filtered by parameters such as name and ID.
   termsOfService: https://example.com/terms
   contact:
     name: API Support
     url: https://example.com/support
     email: support@example.com
 servers:
-  - url: https://personal-tozx01kl.outsystemscloud.com/NegaraAPI/rest/api/v1
+  - url: https://outdev.werkdone.com/VMS_BL/rest/ChatBot/v1
+    description: Development environment
 paths:
   /residents:
     get:
       summary: Get Residents
-      description: |
-        This endpoint retrieves:
-        - A **list of residents** when no specific `id` is provided or when filters like `name` are used.
-        - A **single resident's data** (in a list of one item) when the `id` parameter is provided.
-  
-        Example usage:
-        - `/residents` → Returns all residents.
-        - `/residents?name=John` → Filters residents by name.
-        - `/residents?id=1234567891234567` → Returns a list with a single resident matching the ID.
+      description: Retrieve a list of residents based on query parameters such as name and ID.
       operationId: getResidents
       parameters:
         - name: name
@@ -42,11 +35,45 @@ paths:
             example: 1234567891234567
       responses:
         "200":
-          $ref: "#/components/responses/ResidentListResponse"
+          description: A successful response containing a list of residents.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error message, if any.
+                    example: ""
+                  data:
+                    type: object
+                    properties:
+                      residentlist:
+                        type: array
+                        items:
+                          $ref: "#/components/schemas/ResidentObject"
         "401":
-          $ref: "#/components/responses/Unauthorized"
+          description: Unauthorized access due to missing or invalid Bearer token.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error message.
+                    example: "Unauthorized access."
         "400":
-          $ref: "#/components/responses/BadRequest"
+          description: Bad request due to invalid query parameters.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error message.
+                    example: "Invalid query parameters."
       security:
         - bearerAuth: []
 components:
@@ -55,41 +82,6 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
-  responses:
-    ResidentListResponse:
-      description: A list of residents.
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-                properties:
-                  residentlist:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/ResidentObject"
-    Unauthorized:
-      description: Unauthorized. Invalid or missing Bearer token.
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              error:
-                type: string
-                example: "Unauthorized access."
-    BadRequest:
-      description: Bad Request. Invalid query parameters.
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              error:
-                type: string
-                example: "Invalid query parameters."
   schemas:
     ResidentObject:
       type: object
@@ -98,23 +90,133 @@ components:
           type: string
           description: Resident ID.
           example: 1234567891234567
+        Name:
+          type: string
+          description: Resident's name.
+          example: John Doe
         CaseId:
           type: string
           description: Case ID of the resident.
-          example: "BAX132421"
-        Name:
+          example: CASE123456
+        NRIC:
           type: string
-          description: Name of the resident.
-          example: "John Doe"
-        Wing:
+          description: NRIC of the resident.
+          example: S1234567A
+        MobileNumberCountryCode:
           type: string
-          description: Wing of the resident location.
-          example: "11B"
-        Bed:
+          description: Resident's mobile number country code.
+          example: "+65"
+        MobileNumberCountryIso:
+          type: string
+          description: Resident's mobile number ISO code.
+          example: SG
+        MobileNumber:
+          type: string
+          description: Resident's mobile number.
+          example: "98765432"
+        SalutationId:
           type: integer
-          description: Bed number of the resident location.
-          example: 12
-        Branch:
+          description: Salutation ID.
+          example: 1234567891234567
+        DateOfBirth:
           type: string
-          description: Branch location of the resident.
-          example: "Main Branch"
+          format: date
+          description: Resident's date of birth.
+          example: 2014-12-31
+        AdmissionDate:
+          type: string
+          format: date
+          description: Admission date of the resident.
+          example: 2014-12-31
+        Remarks:
+          type: string
+          description: Additional remarks.
+          example: "Special attention needed"
+        MaritalStatusId:
+          type: integer
+          description: Marital status ID.
+          example: 1234567891234567
+        GenderId:
+          type: integer
+          description: Gender ID.
+          example: 1234567891234567
+        ReligionId:
+          type: integer
+          description: Religion ID.
+          example: 1234567891234567
+        RaceId:
+          type: integer
+          description: Race ID.
+          example: 1234567891234567
+        ClientId:
+          type: string
+          description: Client ID.
+          example: CLIENT12345
+        Layer1Id:
+          type: string
+          description: Layer1 ID.
+          example: LAYER12345
+        BedId:
+          type: string
+          description: Bed ID.
+          example: BED12345
+        IsDicharged:
+          type: boolean
+          description: Indicates if the resident is discharged.
+          example: false
+        DischargedDateTime:
+          type: string
+          format: date-time
+          description: Discharge date and time.
+          example: 2014-12-31T23:59:59.938Z
+        IsDeleted:
+          type: boolean
+          description: Indicates if the resident is deleted.
+          example: false
+        CreatedAt:
+          type: string
+          format: date-time
+          description: Creation timestamp.
+          example: 2014-12-31T23:59:59.938Z
+        CreatedBy:
+          type: integer
+          description: ID of the creator.
+          example: 1234567891234567
+        ModifiedAt:
+          type: string
+          format: date-time
+          description: Last modification timestamp.
+          example: 2014-12-31T23:59:59.938Z
+        ModifiedBy:
+          type: integer
+          description: ID of the last modifier.
+          example: 1234567891234567
+        IsAllowedToBeVisited:
+          type: boolean
+          description: Indicates if the resident is allowed to be visited.
+          example: false
+        IsDIL:
+          type: boolean
+          description: Indicates if the resident is DIL.
+          example: false
+        IsOutOfResidence:
+          type: boolean
+          description: Indicates if the resident is out of residence.
+          example: false
+        OutOfResidenceReturnDate:
+          type: string
+          format: date
+          description: Return date for out-of-residence status.
+          example: 2014-12-31
+        OutOfResidenceRemarks:
+          type: string
+          description: Remarks for out-of-residence status.
+          example: "On vacation"
+        IsSpecialRulesActive:
+          type: boolean
+          description: Indicates if special rules are active for the resident.
+          example: false
+        Location:
+          type: string
+          description: Resident's location.
+          example: "Block A, Room 101"
