--- a/app/datasource/api_vms.yaml
+++ b/app/datasource/api_vms.yaml
@@ -374,3 +374,12 @@ components:
             Name:
               type: string
               example: Figarland Garling
+    ListItem_Object:
+      type: object
+      properties:
+        Id:
+          type: string
+          default: ""
+        Name:
+          type: string
+          default: ""
