--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.actor }}/<image-name>:latest
+  IMAGE_NAME: ${{ github.repository }}:latest
 
 jobs:
   publish:
