--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,9 +24,16 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v3
       with:
         context: .
         push: true
+        platforms: linux/amd64,linux/arm64
         tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
