--- a/app/datasource/api_vms.yaml
+++ b/app/datasource/api_vms.yaml
@@ -12,7 +12,7 @@ paths:
       get:
         summary: Check Visitor Availability
         description: |
-          Retrieve the availability status of a visitor based on query parameters such as name and ID.
+          Retrieve the availability status of a visitor based on optional query parameters such as name and ID.
           The response includes the resident they are visiting, the assigned timeslot, and any remarks about their visit.
         operationId: VisitorAvailability
         tags:
