--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   wd-chat:
     build:
@@ -7,9 +5,9 @@ services:
       dockerfile: Dockerfile
     container_name: wd-chatbot-dev
     ports:
-      - "8080:5005"
+      - "8080:80"
     volumes:
       - .:/app
     env_file:
       - .env
-    command: python main.py
+    command: flask run --host=0.0.0.0 --port=80
